[package]
name = "piano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
once_cell = "*"
serde = "*"
bitflags = "*"

[dev-dependencies]
winit = { git = "https://github.com/rust-windowing/winit" }
tao = { git = "https://github.com/tauri-apps/tao" }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.22"

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
x11-dl = "2.19"
